--- a/app/src/main/res/layout/item_lv_image.xml
+++ b/app/src/main/res/layout/item_lv_image.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/ivImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
                 android:src="@mipmap/default_image_rect" />
         </LinearLayout>
 
