--- a/app/src/main/res/layout/act_article_detail_mine.xml
+++ b/app/src/main/res/layout/act_article_detail_mine.xml
@@ -57,6 +57,8 @@
                     android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。"></TextView>
             </LinearLayout>
 
+            <include layout="@layout/include_article_sample" />
+
             <View style="@style/LineDivider" />
 
             <LinearLayout
@@ -65,11 +67,23 @@
                 android:orientation="vertical"
                 android:padding="@dimen/distance_view">
 
-                <TextView
-                    style="@style/TitleTextStyle"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/distance_view"
-                    android:text="第一次上传"
-                    android:textStyle="bold" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <View
+                        style="@style/LineVerGreen"
+                        android:layout_marginRight="@dimen/distance_divider" />
+
+                    <TextView
+                        style="@style/TitleTextStyle"
+                        android:text="第一次上传"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rvArticle1"
@@ -137,11 +151,22 @@
                     android:orientation="vertical"
                     android:padding="@dimen/distance_view">
 
-                    <TextView
-                        style="@style/TitleTextStyle"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/distance_view"
-                        android:text="第二次上传"
-                        android:textStyle="bold" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <View
+                            style="@style/LineVerGreen"
+                            android:layout_marginRight="@dimen/distance_divider" />
+
+                        <TextView
+                            style="@style/TitleTextStyle"
+                            android:text="第二次上传"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rvArticle2"
