--- a/app/src/main/res/layout/item_lv_home.xml
+++ b/app/src/main/res/layout/item_lv_home.xml
@@ -75,6 +75,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/ivGood"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/benzhouzhixing"
