--- a/app/src/main/res/layout/item_lv_week.xml
+++ b/app/src/main/res/layout/item_lv_week.xml
@@ -21,6 +21,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -35,26 +36,25 @@
                         android:text="我的理想"
                         android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                    <TextView
+                        android:id="@+id/tvTeacher"
+                        style="@style/TextGrayStyle"
                         android:layout_marginTop="@dimen/distance_text"
-                        android:orientation="horizontal">
+                        android:text="议论文" />
 
-                        <TextView
-                            android:id="@+id/tvTeacher"
-                            style="@style/TextGrayStyle"
-                            android:text="议论文" />
-
-                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
 
+                <ImageView
+                    android:id="@+id/ivTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/yangli" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvContent"
                 style="@style/TextStyle"
-                android:layout_marginTop="@dimen/distance_text"
+                android:layout_marginTop="@dimen/distance_divider"
                 android:ellipsize="end"
                 android:maxLines="3"
                 android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的..."
