--- a/app/src/main/res/layout/act_article_detail_mine.xml
+++ b/app/src/main/res/layout/act_article_detail_mine.xml
@@ -45,17 +45,27 @@
                     android:layout_marginTop="@dimen/distance_divider"
                     android:text="2017/08/12" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rvSubject"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/tvContent"
-                    style="@style/TextStyle"
-                    android:layout_marginTop="@dimen/distance_view"
-                    android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。"></TextView>
             </LinearLayout>
+
+            <com.znz.libvideo.videoplayer.video.StandardGSYVideoPlayer
+                android:id="@+id/detailPlayer"
+                android:layout_width="match_parent"
+                android:layout_height="@@dimen/video_height"
+                android:layout_marginBottom="@dimen/distance_view" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvSubject"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/distance_view"
+                android:paddingRight="@dimen/distance_view" />
+
+            <TextView
+                android:id="@+id/tvContent"
+                style="@style/TextStyle"
+                android:padding="@dimen/distance_view"
+                android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。"></TextView>
+
 
             <include layout="@layout/include_article_sample" />
 
