--- a/app/src/main/res/layout/act_help.xml
+++ b/app/src/main/res/layout/act_help.xml
@@ -18,6 +18,7 @@
         android:padding="@dimen/distance_view">
 
         <TextView
+            android:id="@+id/tvContent"
             style="@style/TextStyle"
             android:text="帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档" />
 
