--- a/app/src/main/res/layout/item_lv_message.xml
+++ b/app/src/main/res/layout/item_lv_message.xml
@@ -18,11 +18,13 @@
             android:padding="@dimen/distance_view">
 
             <TextView
+                android:id="@+id/tvTitle"
                 style="@style/TitleTextStyle"
                 android:layout_weight="1"
                 android:text="信息标题" />
 
             <TextView
+                android:id="@+id/tvTime"
                 style="@style/TimeTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_marginLeft="@dimen/distance_view" />
