+好作文接口调用

--- a/app/src/main/res/layout/include_article_sample.xml
+++ b/app/src/main/res/layout/include_article_sample.xml
@@ -35,7 +35,8 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="vertical"
-            android:padding="@dimen/distance_view">
+            android:padding="@dimen/distance_view"
+            android:visibility="gone">
 
             <TextView
                 style="@style/TitleTextStyle"
@@ -57,12 +58,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/distance_view"
             android:orientation="vertical"
             android:paddingLeft="@dimen/distance_view"
             android:paddingRight="@dimen/distance_view">
 
             <TextView
-                android:id="@+id/tvContent"
+                android:id="@+id/tvFanwenContent"
                 style="@style/TextStyle"
                 android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。"
                 android:visibility="visible"></TextView>
@@ -96,7 +98,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvComment"
+            android:id="@+id/tvFanwenComment"
             style="@style/TextRedStyle"
             android:layout_marginBottom="30dp"
             android:paddingLeft="@dimen/distance_view"
