+好作文接口调用

--- a/app/src/main/res/layout/act_article_detail.xml
+++ b/app/src/main/res/layout/act_article_detail.xml
@@ -62,11 +62,11 @@
                     </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/ivGood"
+                        android:id="@+id/ivTag"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/benzhouzhixing"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <TextView
