--- a/app/src/main/res/layout/act_help.xml
+++ b/app/src/main/res/layout/act_help.xml
@@ -11,17 +11,23 @@
 
     <include layout="@layout/include_common_network_status" />
 
-    <LinearLayout
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/distance_view">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tvContent"
-            style="@style/TextStyle"
-            android:text="帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/distance_view">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvContent"
+                style="@style/TextStyle"
+                android:text="帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档帮助文档" />
+
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
