--- a/app/src/main/res/layout/item_lv_vote.xml
+++ b/app/src/main/res/layout/item_lv_vote.xml
@@ -21,6 +21,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingLeft="@dimen/distance_view"
                 android:paddingRight="@dimen/distance_view">
@@ -57,10 +58,10 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/ivGood"
+                    android:id="@+id/ivTag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/icon_youxiu"
+                    android:src="@mipmap/benzhouzhixing"
                     android:visibility="gone" />
 
             </LinearLayout>
