--- a/app/src/main/res/layout/frag_upload_file.xml
+++ b/app/src/main/res/layout/frag_upload_file.xml
@@ -15,6 +15,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/llUploadWord"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
