+好作文接口调用

--- a/app/src/main/res/layout/frag_upload_file.xml
+++ b/app/src/main/res/layout/frag_upload_file.xml
@@ -37,6 +37,8 @@
 
             <View style="@style/Line" />
 
+            <include layout="@layout/include_file" />
+
             <TextView
                 android:id="@+id/tvSubmit"
                 style="@style/BtnRoundStyle"
