--- a/app/src/main/res/layout/act_file_list.xml
+++ b/app/src/main/res/layout/act_file_list.xml
@@ -10,30 +10,20 @@
 
     <include layout="@layout/include_common_network_status" />
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/tvNoData"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="该目录下没有文件"
+        android:visibility="gone" />
 
-        <ListView
-            android:id="@+id/file_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:divider="@color/line"
-            android:dividerHeight="@dimen/line_space"
-            android:visibility="visible" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvFile"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <TextView
-            android:id="@+id/msg"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:visibility="gone" />
-
-    </LinearLayout>
 
 </LinearLayout>
